--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
     "react-to-pdf": "^1.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yoga-layout": "^3.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
