--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/yoga-layout": "^1.9.7",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "nanoid": "^5.0.6",
     "react": "^18.2.0",
